--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
       <option value="8">9</option>
     </select>
   </body>
-  <script src="i2of5.js"></script>
+  <script src="index.js"></script>
 </html>
