--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>i2of5 Generator</title>
-  </head>
 
-  <body>
-    <header>i2of5 Generator</header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>i2of5 Generator</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+  <header>i2of5 Generator</header>
+  <div class="input-field">
     <input id="upcInput" placeholder="Enter UPC here" />
 
     <button id="submitButton">Submit</button>
-
+  </div>
+  <div class="master-pack-container">
+    <p>Select the Master Carton Quantity</p>
     <select id="pack-size-selector">
       <option value="5">2</option>
       <option value="2">3</option>
@@ -38,6 +43,10 @@
       <option value="6">14</option>
       <option value="8">9</option>
     </select>
-  </body>
-  <script src="index.js"></script>
+  </div>
+  <div class="result"></div>
+
+</body>
+<script src="index.js"></script>
+
 </html>
