--- a/index.html
+++ b/index.html
@@ -29,19 +29,23 @@
       <option value="7">10</option>
       <option value="3">12</option>
       <option value="6">14</option>
+      <option value="4">15</option>
       <option value="9">16</option>
       <option value="9">18</option>
       <option value="2">20</option>
       <option value="6">24</option>
       <option value="1">25</option>
+      <option value="7">30</option>
       <option value="5">32</option>
       <option value="8">36</option>
       <option value="2">40</option>
       <option value="9">42</option>
       <option value="7">48</option>
       <option value="3">50</option>
+      <option value="3">64</option>
       <option value="9">96</option>
       <option value="6">100</option>
+
 
 
 
