--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
       <option value="7">48</option>
       <option value="3">50</option>
       <option value="3">64</option>
+      <option value="8">72</option>
+      <option value="7">90</option>
       <option value="9">96</option>
       <option value="6">100</option>
+      <option value="2">108</option>
+      <option value="6">384</option>
 
 
 
